# droneport_gazebo_extensions

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/: FindMAVLink.cmake
include/: droneport_mavlink_interface.h  gazebo_droneport_plugin.h
models/borsky_park/: model.config  model.sdf
models/drone1/: model.sdf
models/drone1_cam/: model.config  model.sdf
models/drone2/: model.sdf
models/drone2_cam/: model.config  model.sdf
models/droneport/: model.config  model.sdf
models/droneport/materials/scripts/: droneport_sticker.material
models/droneport2/: model.sdf
models/droneport_new/: model.config  model.sdf
models/droneport_new/materials/scripts/: droneport_sticker.material
models/droneport_new_2/: model.config  model.sdf
models/droneport_new_2/materials/scripts/: droneport.material  droneport_sticker.material
models/droneport_new_one_aruco/: model.sdf
models/droneport_new_one_aruco/materials/scripts/: droneport copy.material  droneport.material
models/fpv_cam/: fpv_cam.sdf
models/fpv_cam_5601/: fpv_cam.sdf
models/fpv_cam_5602/: fpv_cam.sdf
models/grass_plane/: model.sdf
models/iris/: iris.sdf
models/iris_fpv_cam/: iris_fpv_cam.sdf
run/: gazebo_sitl_multiple_run.sh  run_gazebo_simulation.sh  run_gazebo_simulation_bory.sh  run_gzclient.bash  run_new_model.sh  run_new_model_camera.sh  run_new_model_camera_bory.sh  setup_gazebo.bash
scripts/: mavlink_battery_sender.py  mavlink_param_set_sender.py
scripts/aruco_landing/: capture.py  demo.py  demo2.py  landing.py
scripts/opencv_code/: aruco_type.py  gen_aruco.py  load_utp_stream.py
src/: droneport_mavlink_interface.cpp  gazebo_droneport_plugin.cpp
world/: borsky_park.world  empty_world.world
